--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitkey",
+  "name": "@contco/bitkey",
   "version": "0.0.2",
   "description": "bitkey is the bitcoin key management package",
   "main": "./lib/src/index.js",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/contco/bitkey.git"
+    "url": "https://github.com/contco/bitkey.git"
   },
   "license": "MIT",
   "author": {
@@ -61,6 +61,11 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "lint-staged": {
     "*.ts": "eslint --cache --cache-location .eslintcache --fix"
